--- a/modeling/BD/1. Brainstorm.md
+++ b/modeling/BD/1. Brainstorm.md
@@ -1,8 +1,11 @@
 # Brainstorm
 
+## For BD
+
 - Сервис для тренировки памяти
 - Тренировки: цифры, слова, карты, картинки, абстрактные картинки, имена и лица, бинарные цифры, цифры на слух
 - Дисциплины: как тренировки, но разделены на дисциплины по времени (1, 5, 10, 30 минут) и по количеству (30 цифр, 50, 100...)
+- Дисциплина: Смешанный режим
 - Статистика по тренировкам и дисциплинам
 - В статистике по тренировкам - оценка за скорость, за количество, общая
 - В результатах: количество цифр, паттерн показа...
@@ -10,4 +13,11 @@
 - Пользователь выбирает вид тренировки, запоминает, видит результат
 - Пользователь может включить отвлекающее упражнение перед вспоминанием
 - Комментарии к результатам
-- В будущем: Элементы соц. сетей (друзья, переписка), достижения
+- В описании предметной области: что нужно предусматривать на будущее
+- Рейтинг по количеству запомненных данных
+- В будущем: Элементы соц. сетей (друзья, переписка), достижения, посты
+
+## Base
+
+- Не сразу, но сервис обязательно должен работать оффлайн и быть PWA
+- Если при вспоминании был пропущен 1 элемент, считать это 1 ошибкой и в результате писать - пропущенный элемент
