--- a/modeling/BD/1. Brainstorm.md
+++ b/modeling/BD/1. Brainstorm.md
@@ -16,6 +16,9 @@
 - В описании предметной области: что нужно предусматривать на будущее
 - Рейтинг по количеству запомненных данных
 - В будущем: Элементы соц. сетей (друзья, переписка), достижения, посты
+- в личном кабинете ранг пользователя (общий). При клике модальное окно в рангом по всем типам тренировок
+- Эмблемы за ТОП - емблема "ТОП 10 цифры", "ТОП 10 слова", "ТОП 10", "!! ТОП 1 !!", "ТОП 2", "ТОП 3"
+- Пользователи входящие в топ 1, 2, 3 (по общему рейтингу) на аватарке (либо в другом месте) отмечаются золотой, серебреной или бронзовой звездочкой
 
 ## Base
 
