--- a/modeling/BD/1. Brainstorm.md
+++ b/modeling/BD/1. Brainstorm.md
@@ -20,6 +20,7 @@
 - Эмблемы за ТОП - емблема "ТОП 10 цифры", "ТОП 10 слова", "ТОП 10", "!! ТОП 1 !!", "ТОП 2", "ТОП 3"
 - Пользователи входящие в топ 1, 2, 3 (по общему рейтингу) на аватарке (либо в другом месте) отмечаются золотой, серебреной или бронзовой звездочкой
 - Рейтинг
+- Все таблицы данных должны содержать данные необходимые для выполнения условий описания дисциплин чемпионата мира
 
 ## Base
 
